<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/google_tts"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_ttsSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tts_settings" />

        <Button
            android:id="@+id/button_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/test" />
    </LinearLayout>
-->
    <LinearLayout
        android:id="@+id/exampleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageExample"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tts_talkExample"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_phonelink_ring_24px" />

        <TextView
            android:id="@+id/exampleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_text"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/outputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exampleLayout">

        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/tts_talkTime"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_access_time_24px" />

            <Switch
                android:id="@+id/tts_talkTimeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutmessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/layout_contact"
            app:layout_constraintStart_toEndOf="@+id/layout_time"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editText_IntroText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="@string/intro_text_default"
                android:ems="10"
                android:hint="@string/intro_text_default"
                android:inputType="textPersonName"
                android:text="@string/intro_text_default" />

            <Switch
                android:id="@+id/tts_talkIntroSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/layout_message"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewContact"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/tts_talkContact"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_person_pin_24px" />

            <Switch
                android:id="@+id/tts_talkContactSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewMessage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/tts_talkMessage"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_textsms_24px" />

            <Switch
                android:id="@+id/tts_talkMessageSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/power_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputLayout">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/powerActionButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:elevation="8dp"
            app:fabCustomSize="64dp"
            app:maxImageSize="48dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:backgroundTint="@color/disabled_fab"
            app:srcCompat="@drawable/ic_baseline_power_settings_new_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/powerText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/power_off"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/powerActionButton"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power_title_layout" />


</android.support.constraint.ConstraintLayout>